--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "kantan"
 authors = ["Joseph Lenton <josephlenton@gmail.com>"]
-version = "7.2.0"
+version = "1.0.0"
 edition = "2021"
 license = "MIT"
-description = "For simple no-nonsense request building using Rust"
+description = "For simple no-nonsense requests using Rust"
 keywords = []
 categories = []
 repository = "https://github.com/JosephLenton/kantan"
@@ -13,11 +13,9 @@ readme = "README.md"
 
 [dependencies]
 auto-future = "1.0.0"
-axum = "0.6.10"
 anyhow = "1.0.69"
 cookie = "0.17.0"
 hyper = { version = "0.14.24", features = ["client", "http1"] }
-portpicker = "0.1.1"
 serde = { version = "1.0.152" }
 serde_json = "1.0.93"
 tokio = { version = "1.26.0", features = ["rt", "time"] }
