--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ serde_json = "1.0.93"
 tokio = { version = "1.26.0", features = ["rt", "time"] }
 
 [dev-dependencies]
+axum = "0.6.10"
+axum-test = "7.3.0"
 axum-extra = { version = "0.7.0", features = ["cookie"] }
 serde-email = { version = "1.3.0", features = ["serde"] }
 tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
