--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "kantan"
 authors = ["Joseph Lenton <josephlenton@gmail.com>"]
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 license = "MIT"
 description = "For simple no-nonsense requests using Rust"
@@ -15,7 +15,8 @@ readme = "README.md"
 auto-future = "1.0.0"
 anyhow = "1.0.69"
 cookie = "0.17.0"
-hyper = { version = "0.14.26", features = ["client", "http1", "tcp"] }
+hyper = { version = "0.14.26", features = ["client", "http1", "http2", "tcp"] }
+hyper-tls = "0.5.0"
 serde = { version = "1.0.152" }
 serde_json = "1.0.93"
 tokio = { version = "1.26.0", features = ["rt", "time"] }
